--- a/src/components/Weather/Weather.style.scss
+++ b/src/components/Weather/Weather.style.scss
@@ -5,7 +5,7 @@ $width: 1024px;
   grid-template-columns: 2fr 1fr;
   gap: 20px;
   width: 100%;
-  min-width: $width;
+  max-width: $width;
   align-content: baseline;
 }
 
@@ -18,6 +18,7 @@ $width: 1024px;
 @media (max-width: 1024px) {
   .weather {
     padding: 10px;
+    grid-template-columns: 2fr 2fr;
   }
 }
 
