--- a/src/components/Details/Details.style.scss
+++ b/src/components/Details/Details.style.scss
@@ -1,15 +1,19 @@
+@use '../../styles/colors.scss';
+@use '../../styles/sizes.scss';
+@use '../../styles/fonts.scss';
+
 .weather__details {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: sizes.$gap-medium;
 
     &-item {
         text-align: center;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: sizes.$screen-md) {
     .weather__details {
         grid-template-columns: 1fr 1fr;
     }
