--- a/src/components/Summary/Summary.style.scss
+++ b/src/components/Summary/Summary.style.scss
@@ -1,3 +1,7 @@
+@use '../../styles/colors.scss';
+@use '../../styles/sizes.scss';
+@use '../../styles/fonts.scss';
+
 .weather__summary {
     width: 100%;
   }
