--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,10 @@ body {
     line-height: fonts.$line-height-base;
     background-color: colors.$background-color-light;
 }
+
+#root {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
