--- a/src/components/Box/Box.style.scss
+++ b/src/components/Box/Box.style.scss
@@ -7,3 +7,9 @@
     padding: sizes.$padding-medium;
     border-radius: sizes.$border-radius-medium;
 }
+.dark .weather__box {
+    background-color: colors.$background-box-color-dark;
+}
+.light .weather__box {
+    background-color: colors.$background-box-color-light;
+}
