--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,5 +4,16 @@ $background-color-dark:#12192a;
 $background-box-color-light: #ffffff;
 $background-box-color-dark: #0b0f1d;
 
-$text-color-light: #000;
-$text-color-dark: #fff;
+$border-color-light: #f0f1f3;
+$border-color-dark: #1f242e;
+
+$text-color-light: #252f41;
+$text-color-dark: #f5f5f5;
+
+$text-supporting-color-blue: #0d7bfc;
+
+// Button
+$button-background-color-light: #0b0f1d;
+$button-background-color-dark: #f5f5f5;
+$button-text-color-dark: #0b0f1d;
+$button-text-color-light: #ffffff;
